<resources>
    <string name="app_name">Practical Test</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="header1">The easiest way to order</string>
    <string name="header2">No lines. No waiting.</string>

    <string name="loginError1">Email or Password is Empty</string>
    <string name="error1">An error has occurred</string>

    <string name="mockEmail">test@testmenu.app</string>
    <string name="mockPassword">test1234</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
</resources>